jvm heap 영역 상세 설명 추가 및 GC heap 관련 설정 추가